Migration to YandexMusicModClient 1.17.9

--- a/src/package.json
+++ b/src/package.json
@@ -1,9 +1,10 @@
 {
     "private": true,
     "name": "YandexMusic",
-    "version": "5.28.4",
+    "version": "5.33.2",
     "description": "Персональные рекомендации, подборки на любой случай и музыкальные новинки",
-    "author": "Яндекс Музыка",
+    "author": "Яндекс Музыка <music@support.yandex.ru>",
+    "homepage": "https://music.yandex.ru/download/",
     "main": "main/index.js",
     "dependencies": {
         "@formatjs/icu-messageformat-parser": "~2.7.8",
@@ -26,11 +27,11 @@
         "js-yaml": "~4.1.0"
     },
     "buildInfo": {
-        "VERSION": "5.28.4",
-        "BRANCH": "925c3f192aff818436dbe84f75918010b24e3ffa"
+        "VERSION": "5.32.2",
+        "BRANCH": "e9c57ab90c2d1279ec75b31765ca24056b4beecf"
     },
     "common": {
-        "SHOW_RELEASE_NOTES": false,
+        "SHOW_RELEASE_NOTES": true,
         "REFRESH_EVENT_TRIGGER_TIME_MS": 600000,
         "UPDATE_POLL_INTERVAL_MS": 1800000,
         "UPDATE_URL": "https://music-desktop-application.s3.yandex.net/stable/",
